log
Thu 14 Sep 2023 02:56:19 AM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
2c935c3
Thu 14 Sep 2023 03:03:43 AM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  6|7
total_score: 5/70
99b9abe
Thu 14 Sep 2023 03:05:39 AM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  6|7
total_score: 5/70
81e56fb
Thu 14 Sep 2023 03:06:29 AM UTC: 
 treemap.c | 14 +++++++++-----
 1 file changed, 9 insertions(+), 5 deletions(-)
 tests:  6|7
total_score: 5/70
1753d7f
Thu 14 Sep 2023 03:12:21 AM UTC: 
 treemap.c | 24 +++++++-----------------
 1 file changed, 7 insertions(+), 17 deletions(-)
 tests:  11|6
total_score: 15/70
a0bd270
Thu 14 Sep 2023 03:29:57 AM UTC: 
 treemap.c | 33 +++++++++++++++++++++++++++++++++
 1 file changed, 33 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:84:23: error: ‘nuevoNodo’ undeclared (first use in this function)
   84 |       parent->right = nuevoNodo;
      |                       ^~~~~~~~~
treemap.c:84:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
077f7f7
Thu 14 Sep 2023 03:30:16 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
94da9fb
Thu 14 Sep 2023 04:33:58 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
01ca3aa
Thu 14 Sep 2023 04:39:39 PM UTC: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
d7ed09e
Thu 14 Sep 2023 04:55:59 PM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  17|4
total_score: 35/70
6b07a25
Thu 14 Sep 2023 04:58:44 PM UTC: 
 treemap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  18|3
total_score: 40/70
8cbf9c0
Thu 14 Sep 2023 05:02:11 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
0c598c6
Thu 14 Sep 2023 05:13:58 PM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  25|1
total_score: 60/70
517f491
